--- a/module/User/view/user/real-estate/edit.phtml
+++ b/module/User/view/user/real-estate/edit.phtml
@@ -856,12 +856,12 @@ if(!empty($this->item)){
 <script type='text/javascript' src='<?php echo TEMPLATE_URL; ?>/user/js/blocksui/jquery.simplemodal.js'></script>
 <script type='text/javascript' src='<?php echo TEMPLATE_URL; ?>/user/js/blocksui/osx.js'></script>
 
-<script type="text/javascript" src="<?php echo EDITOR_URL; ?>/ckeditor-study/ckeditor.js"></script>
+<script type="text/javascript" src="<?php echo EDITOR_URL; ?>/ckeditor/ckeditor.js"></script>
 <script type="text/javascript" src="<?php echo EDITOR_URL; ?>/ckfinder/ckfinder.js"></script>
 
 <script>
         var content = CKEDITOR.replace( 'content', {
-            customConfig    : 'config-05.js',
+            customConfig    : 'config.js',
             
         });
         CKFinder.setupCKEditor(content, 'plugins/ckfinder/' );
