--- a/public/templates/user/index.phtml
+++ b/public/templates/user/index.phtml
@@ -24,11 +24,14 @@
     ?>
 
 
+    <script src="<?php echo TEMPLATE_URL ?>/user/js/jquery-1.11.1.min.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/ui/1.9.1/jquery-ui.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.1/jquery.form.js" type="text/javascript"></script>
 
     <!-- Scripts -->
     <?php echo $this->headScript()
             ->prependFile(TEMPLATE_URL . '/user/js/submit.js')
-            ->prependFile(TEMPLATE_URL . '/user/js/jquery-ui/jquery.js?v=23072014.16')
+            //->prependFile(TEMPLATE_URL . '/user/js/jquery-ui/jquery.js?v=23072014.16')
             ->prependFile(TEMPLATE_URL . '/user/js/jquery-ui/jquery.cookie.js')
             ->prependFile(TEMPLATE_URL . '/user/js/Login.js?v=23072014.1666')
             ->prependFile(TEMPLATE_URL . '/user/js/stepcarousel_NodeMsg.js?v=123333')
